// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Connector with status: all matches snapshot when provided "full" status 1`] = `
<span
  className="wizard-progress-connector wizard-progress-connector--full"
/>
`;

exports[`Progress Connector with status: some matches snapshot when provided "some" status 1`] = `
<span
  className="wizard-progress-connector wizard-progress-connector--some"
/>
`;

exports[`Progress Connector without Props matches snapshot when provided minimal props 1`] = `
<span
  className="wizard-progress-connector wizard-progress-connector--none"
/>
`;
